--- a/xlang/javascript-typescript/buildserver/package.json
+++ b/xlang/javascript-typescript/buildserver/package.json
@@ -12,9 +12,9 @@
     "bluebird": "^3.4.7",
     "chai": "^3.4.34",
     "commander": "^2.9.0",
+    "fast-json-patch": "^1.2.2",
     "iterare": "^0.0.7",
-    "javascript-typescript-langserver": "^2.0.0-pre.32",
-    "json-patch": "^0.6.1",
+    "javascript-typescript-langserver": "^2.0.0-pre.33",
     "lightstep-tracer": "^0.20.3",
     "lodash": "^4.17.4",
     "mkdirp": "^0.5.1",
@@ -32,10 +32,9 @@
   },
   "devDependencies": {
     "@types/chai": "3.4.34",
-    "@types/json-patch": "^0.0.29",
     "@types/lodash": "4.14.53",
     "@types/mkdirp": "0.3.29",
-    "@types/mocha": "2.2.33",
+    "@types/mocha": "2.2.41",
     "@types/mz": "0.0.30",
     "@types/object-hash": "0.5.28",
     "@types/rimraf": "0.0.28",
