--- a/client/browser-ext/package.json
+++ b/client/browser-ext/package.json
@@ -33,18 +33,18 @@
 		"jsdom": "^9.8.3",
 		"mocha": "^2.4.5",
 		"shelljs": "^0.6.0",
-		"ts-loader": "^1.2.0",
+		"ts-loader": "^2.1.0",
 		"ts-node": "^1.7.0",
-		"typescript": "^2.0.9",
+		"typescript": "^2.3.3",
 		"typescript-formatter": "^4.0.1",
 		"webpack": "^1.12.9",
 		"webpack-dev-server": "^1.10.1"
 	},
 	"dependencies": {
+		"@reactivex/rxjs": "^5.4.0",
 		"@types/jsdom": "^2.0.30",
 		"autobind-decorator": "^1.3.4",
 		"bluebird": "^3.3.4",
-		"html-truncate": "1.2.2",
 		"immutability-helper": "^2.1.1",
 		"lodash": "^4.11.2",
 		"marked": "^0.3.6",
@@ -52,7 +52,7 @@
 		"react-dom": "^0.14.7",
 		"react-icon-base": "^2.0.0",
 		"telligent-tracker": "^0.1.2",
-		"typestyle": "^0.7.4",
+		"typestyle": "^1.3.2",
 		"whatwg-fetch": "^2.0.3"
 	}
 }
