browser-ext: syntax highlight tooltips!

--- a/client/browser-ext/chrome/manifest.prod.json
+++ b/client/browser-ext/chrome/manifest.prod.json
@@ -25,6 +25,9 @@
       "run_at": "document_end",
       "js": [
         "js/inject.bundle.js"
+      ],
+      "css": [
+        "css/highlight.css"
       ]
     }
   ],
