--- a/client/browser-ext/package.json
+++ b/client/browser-ext/package.json
@@ -45,6 +45,7 @@
 		"@types/jsdom": "^2.0.30",
 		"autobind-decorator": "^1.3.4",
 		"bluebird": "^3.3.4",
+		"highlight.js": "^9.12.0",
 		"immutability-helper": "^2.1.1",
 		"lodash": "^4.11.2",
 		"marked": "^0.3.6",
