--- a/client/browser-ext/package.json
+++ b/client/browser-ext/package.json
@@ -41,7 +41,6 @@
 		"webpack-dev-server": "^1.10.1"
 	},
 	"dependencies": {
-		"@reactivex/rxjs": "^5.4.0",
 		"@types/jsdom": "^2.0.30",
 		"autobind-decorator": "^1.3.4",
 		"bluebird": "^3.3.4",
@@ -52,6 +51,7 @@
 		"react": "^0.14.7",
 		"react-dom": "^0.14.7",
 		"react-icon-base": "^2.0.0",
+		"rxjs": "^5.4.0",
 		"telligent-tracker": "^0.1.2",
 		"typestyle": "^1.3.2",
 		"whatwg-fetch": "^2.0.3"
