--- a/dev/up/.env
+++ b/dev/up/.env
@@ -1,4 +1,4 @@
-# Most of these are copied over from `dev/server.sh`
+# Most of these are copied over from `dev/start.sh`
 
 AUTH0_CLIENT_ID=onW9hT0c7biVUqqNNuggQtMLvxUWHWRC
 AUTH0_CLIENT_SECRET=cpse5jYzcduFkQY79eDYXSwI6xVUO0bIvc4BP6WpojdSiEEG6MwGrt8hj_uX3p5a
