--- a/client/browser-ext/tsconfig.json
+++ b/client/browser-ext/tsconfig.json
@@ -24,7 +24,9 @@
     "sourceMap": true,
     "strictNullChecks": true,
     "experimentalDecorators": true,
-    "noEmit": true
+    "noEmit": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true
   },
   "exclude": [
     "node_modules",
