--- a/client/browser-ext/chrome/manifest.prod.json
+++ b/client/browser-ext/chrome/manifest.prod.json
@@ -50,5 +50,6 @@
     "http://*/",
     "https://*/"
   ],
-  "content_security_policy": "default-src 'self'; script-src 'self'; connect-src 'self' https://sourcegraph-logging.telligentdata.com;"
+  "content_security_policy": "default-src 'self'; script-src 'self'; connect-src 'self' https://sourcegraph-logging.telligentdata.com;",
+  "web_accessible_resources": ["img/sourcegraph-mark.svg"]
 }
