--- a/client/browser-ext/package.json
+++ b/client/browser-ext/package.json
@@ -22,10 +22,10 @@
     "@types/lodash": "^4.14.38",
     "@types/marked": "^0.0.28",
     "@types/mocha": "^2.2.32",
+    "@types/query-string": "^4.3.1",
     "@types/react": "^0.14.47",
     "@types/react-dom": "^0.14.18",
     "@types/shelljs": "^0.3.32",
-    "@types/query-string": "^4.3.1",
     "@types/utf8": "^2.1.5",
     "chai": "^3.2.0",
     "fetch-mock": "^5.5.0",
@@ -42,6 +42,7 @@
     "webpack-dev-server": "^1.10.1"
   },
   "dependencies": {
+    "@sourcegraph/rxjs": "^5.4.0",
     "@types/jsdom": "^2.0.30",
     "autobind-decorator": "^1.3.4",
     "bluebird": "^3.3.4",
@@ -53,7 +54,6 @@
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-icon-base": "^2.0.0",
-    "rxjs": "^5.4.0",
     "telligent-tracker": "^0.1.2",
     "typestyle": "^1.3.2",
     "whatwg-fetch": "^2.0.3"
