--- a/cmd/frontend/internal/app/web_modules/package.json
+++ b/cmd/frontend/internal/app/web_modules/package.json
@@ -33,6 +33,7 @@
     "immutable": "^3.8.1",
     "lodash": "^4.11.2",
     "marked": "^0.3.6",
+    "moment": "^2.18.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "rxjs": "^5.4.2",
