--- a/cmd/frontend/internal/app/web_modules/package.json
+++ b/cmd/frontend/internal/app/web_modules/package.json
@@ -14,7 +14,7 @@
     "@types/deep-equal": "^1.0.0",
     "@types/lodash": "^4.14.38",
     "@types/marked": "^0.0.28",
-    "@types/react": "^0.14.47",
+    "@types/react": "^15.0.39",
     "@types/react-dom": "^0.14.18",
     "@types/urijs": "^1.15.33",
     "ts-loader": "^2.1.0",
@@ -24,7 +24,6 @@
     "webpack": "^3.0.0"
   },
   "dependencies": {
-    "@sourcegraph/rxjs": "^5.4.0",
     "css-loader": "^0.28.4",
     "csstips": "^0.2.2",
     "csx": "^8.2.1",
@@ -38,10 +37,10 @@
     "node-sass": "^4.5.3",
     "postcss-loader": "^2.0.6",
     "prop-types": "^15.5.10",
-    "react": "^0.14.7",
-    "react-dom": "^0.14.7",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
     "react-icon-base": "^2.0.0",
-    "react-icons": "^2.2.5",
+    "rxjs": "^5.4.2",
     "sass-loader": "^6.0.6",
     "typestyle": "^1.3.7",
     "urijs": "^1.18.10",
