webapp: search checkpoint

--- a/cmd/frontend/internal/app/web_modules/package.json
+++ b/cmd/frontend/internal/app/web_modules/package.json
@@ -13,8 +13,10 @@
   "devDependencies": {
     "@types/lodash": "^4.14.38",
     "@types/marked": "^0.0.28",
+    "@types/query-string": "^4.3.1",
     "@types/react": "^15.0.39",
     "@types/react-dom": "^0.14.18",
+    "@types/react-icons": "^2.2.2",
     "@types/urijs": "^1.15.33",
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^3.0.0",
@@ -30,15 +32,19 @@
     "copy-to-clipboard": "^3.0.7",
     "csstips": "^0.2.2",
     "csx": "^8.2.1",
+    "dom-scroll-into-view": "^1.2.1",
     "highlight.js": "^9.12.0",
     "immutable": "^3.8.1",
     "lodash": "^4.11.2",
     "marked": "^0.3.6",
     "moment": "^2.18.1",
+    "query-string": "^5.0.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-icons": "^2.2.5",
     "rxjs": "^5.4.2",
     "sass-loader": "^6.0.6",
+    "scroll-into-view-if-needed": "^1.1.0",
     "typestyle": "^1.3.7",
     "urijs": "^1.18.10",
     "whatwg-fetch": "^2.0.3"
