--- a/cmd/frontend/internal/app/web_modules/package.json
+++ b/cmd/frontend/internal/app/web_modules/package.json
@@ -47,6 +47,7 @@
     "scroll-into-view-if-needed": "^1.1.0",
     "typestyle": "^1.3.7",
     "urijs": "^1.18.10",
+    "url-parse": "^1.1.9",
     "whatwg-fetch": "^2.0.3"
   }
 }
