--- a/cmd/frontend/internal/app/web_modules/package.json
+++ b/cmd/frontend/internal/app/web_modules/package.json
@@ -29,7 +29,8 @@
     "tslint-webpack-plugin": "^0.5.0",
     "typescript": "^2.3.3",
     "typescript-formatter": "^4.0.1",
-    "webpack": "^3.0.0"
+    "webpack": "^3.0.0",
+    "webpack-shell-plugin": "^0.5.0"
   },
   "dependencies": {
     "copy-to-clipboard": "^3.0.7",
