webapp: reorganize project structure

--- a/cmd/frontend/internal/app/web_modules/tsconfig.json
+++ b/cmd/frontend/internal/app/web_modules/tsconfig.json
@@ -5,8 +5,8 @@
         "moduleResolution": "node",
         "baseUrl": ".",
         "paths": {
-            "app/*": [
-                "./*"
+            "sourcegraph/*": [
+                "./sourcegraph/*"
             ]
         },
         "lib": [
