--- a/cmd/frontend/internal/app/web_modules/package.json
+++ b/cmd/frontend/internal/app/web_modules/package.json
@@ -39,6 +39,8 @@
     "dom-scroll-into-view": "^1.2.1",
     "highlight.js": "^9.12.0",
     "immutable": "^3.8.1",
+    "jquery": "^3.2.1",
+    "jstree": "^3.3.4",
     "lodash": "^4.11.2",
     "marked": "^0.3.6",
     "moment": "^2.18.1",
@@ -46,6 +48,7 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-icons": "^2.2.5",
+    "react-resizable-box": "^2.0.6",
     "react-visibility-sensor": "^3.10.1",
     "rxjs": "^5.4.2",
     "sass-loader": "^6.0.6",
