webapp: update components

--- a/cmd/frontend/internal/app/web_modules/tsconfig.json
+++ b/cmd/frontend/internal/app/web_modules/tsconfig.json
@@ -8,7 +8,7 @@
             "sourcegraph/*": [
                 "sourcegraph/*"
             ],
-            "@sourcegraph/components/*": [
+            "@sourcegraph/components/src/*": [
                 "node_modules/@sourcegraph/components/src/*"
             ]
         },
