Add TSLint rules for webapp and VS Code config (#6763)

--- a/.editorconfig
+++ b/.editorconfig
@@ -7,5 +7,11 @@ trim_trailing_whitespace = true
 indent_style = tab
 indent_size = 4
 
+[*.{tsx?,jsx?,json}]
+indent_style = space
+
+[*.json]
+indent_size = 2
+
 [*.md]
 trim_trailing_whitespace = false
