--- a/cmd/frontend/internal/app/web_modules/tsconfig.json
+++ b/cmd/frontend/internal/app/web_modules/tsconfig.json
@@ -25,7 +25,7 @@
     "experimentalDecorators": true,
     "noEmit": true,
     "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedParameters": false,
     "downlevelIteration": true,
     "plugins": [
       {
