--- a/cmd/frontend/internal/app/web_modules/package.json
+++ b/cmd/frontend/internal/app/web_modules/package.json
@@ -38,6 +38,7 @@
     "csstips": "^0.2.2",
     "csx": "^8.2.1",
     "dom-scroll-into-view": "^1.2.1",
+    "escape-string-regexp": "^1.0.5",
     "highlight.js": "^9.12.0",
     "immutable": "^3.8.1",
     "lodash": "^4.11.2",
@@ -45,6 +46,7 @@
     "moment": "^2.18.1",
     "query-string": "^5.0.0",
     "react": "^15.6.1",
+    "react-autosuggest": "^9.3.2",
     "react-dom": "^15.6.1",
     "react-icons": "^2.2.5",
     "react-visibility-sensor": "^3.10.1",
