--- a/cmd/frontend/internal/app/web_modules/package.json
+++ b/cmd/frontend/internal/app/web_modules/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.1",
   "description": "Sourcegraph",
   "scripts": {
-    "build": "NODE_ENV=production webpack --config webpack.config.js --progress --profile --colors",
-    "watch": "NODE_ENV=development webpack --config webpack.config.js --progress --profile --colors --watch",
+    "build": "NODE_ENV=production webpack --config webpack.config.ts --progress --profile --colors",
+    "watch": "NODE_ENV=development webpack --config webpack.config.ts --progress --profile --colors --watch",
     "graphql": "get-graphql-schema http://localhost:3080/.api/graphql --json | gql2ts -o gqlschema.d.ts",
     "lint": "tslint -c tslint.json -p tsconfig.json -e 'node_modules/**' '**/*.tsx'"
   },
@@ -16,6 +16,7 @@
     "@types/query-string": "^4.3.1",
     "@types/react": "^16.0.0",
     "@types/urijs": "^1.15.33",
+    "@types/webpack": "^3.0.10",
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^3.0.0",
     "get-graphql-schema": "^2.1.1",
@@ -23,6 +24,7 @@
     "node-sass": "^4.5.3",
     "postcss-loader": "^2.0.6",
     "ts-loader": "^2.1.0",
+    "ts-node": "^3.3.0",
     "tslint": "^5.6.0",
     "tslint-language-service": "^0.9.6",
     "tslint-webpack-plugin": "^0.5.0",
