--- a/web/package.json
+++ b/web/package.json
@@ -35,7 +35,7 @@
     "webpack-shell-plugin": "^0.5.0"
   },
   "dependencies": {
-    "@sourcegraph/components": "0.0.16",
+    "@sourcegraph/components": "^0.1.0",
     "@sourcegraph/icons": "^1.0.1",
     "copy-to-clipboard": "^3.0.7",
     "csstips": "^0.2.2",
