--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
   "author": "John Rothfels <john@sourcegraph.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/js-yaml": "^3.9.1",
     "@types/lodash": "^4.14.38",
     "@types/marked": "^0.0.28",
     "@types/react": "^16.0.0",
@@ -43,6 +44,7 @@
     "escape-string-regexp": "^1.0.5",
     "highlight.js": "^9.12.0",
     "immutable": "^3.8.1",
+    "js-yaml": "github:eseliger/js-yaml#4a2b61d6ca83942174e59ccc915a731358f2a80e",
     "lodash": "^4.11.2",
     "marked": "^0.3.6",
     "moment": "^2.18.1",
