--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,12 @@
     "@types/react-router": "^4.0.15",
     "@types/react-router-dom": "^4.0.7",
     "@types/webpack": "^3.0.10",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-minify": "^0.2.0",
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^3.0.0",
     "get-graphql-schema": "^2.1.1",
@@ -25,13 +31,13 @@
     "node-sass": "^4.5.3",
     "postcss-loader": "^2.0.6",
     "sass-loader": "^6.0.6",
-    "ts-loader": "^2.1.0",
+    "ts-loader": "^2.3.6",
     "ts-node": "^3.3.0",
     "tslint": "^5.6.0",
     "tslint-language-service": "^0.9.6",
     "tslint-webpack-plugin": "^0.5.0",
     "typescript": "^2.4.2",
-    "webpack": "^3.0.0",
+    "webpack": "^3.5.6",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-shell-plugin": "^0.5.0"
   },
