--- a/web/.vscode/tasks.json
+++ b/web/.vscode/tasks.json
@@ -5,7 +5,7 @@
   "tasks": [
     {
       "type": "npm",
-      "script": "lint",
+      "script": "tslint",
       "problemMatcher": {
         "fileLocation": "absolute",
         "owner": "tslint",
@@ -17,6 +17,32 @@
           "column": 4,
           "message": 5
         }
+      }
+    },
+    {
+      "type": "npm",
+      "script": "stylelint",
+      "problemMatcher": {
+        "fileLocation": [
+          "relative",
+          "${workspaceRoot}"
+        ],
+        "owner": "stylelint",
+        "severity": "error",
+        "pattern": [
+          {
+            "regexp": "^(.+\\.scss)$",
+            "file": 1
+          },
+          {
+            "regexp": "^\\s*(\\d+):(\\d+)\\s+✖\\s+(.+)\\s+(.+)$",
+            "line": 1,
+            "column": 2,
+            "message": 3,
+            "code": 4,
+            "loop": true
+          }
+        ]
       }
     },
     {
