--- a/web/package.json
+++ b/web/package.json
@@ -6,7 +6,9 @@
     "build": "NODE_ENV=production webpack --config webpack.config.ts --progress --profile --colors",
     "watch": "NODE_ENV=development webpack --config webpack.config.ts --progress --profile --colors --watch",
     "graphql": "get-graphql-schema http://localhost:3080/.api/graphql --json | gql2ts -o src/gqlschema.d.ts",
-    "lint": "tslint -c tslint.json -p tsconfig.json 'src/**/*.tsx'"
+    "lint": "npm run tslint && npm run stylelint",
+    "tslint": "tslint -c tslint.json -p tsconfig.json 'src/**/*.tsx'",
+    "stylelint": "stylelint 'src/**/*.scss'"
   },
   "author": "John Rothfels <john@sourcegraph.com>",
   "license": "MIT",
@@ -32,6 +34,8 @@
     "postcss-loader": "^2.0.6",
     "sass-loader": "^6.0.6",
     "ts-loader": "^2.3.6",
+    "stylelint": "^8.1.1",
+    "stylelint-config-recommended": "^1.0.0",
     "ts-node": "^3.3.0",
     "tslint": "^5.6.0",
     "tslint-language-service": "^0.9.6",
