--- a/web/package.json
+++ b/web/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.1",
   "description": "Sourcegraph",
   "scripts": {
-    "build": "NODE_ENV=production webpack --config webpack.config.ts --progress --profile --colors",
-    "watch": "NODE_ENV=development webpack --config webpack.config.ts --progress --profile --colors --watch",
+    "build": "webpack --config webpack.config.ts --progress --profile --colors",
+    "watch": "npm run build -- --watch",
     "graphql": "get-graphql-schema http://localhost:3080/.api/graphql --json | gql2ts -o src/gqlschema.d.ts",
     "lint": "npm run tslint && npm run stylelint",
     "tslint": "tslint -c tslint.json -p tsconfig.json 'src/**/*.tsx'",
