--- a/web/package.json
+++ b/web/package.json
@@ -24,9 +24,8 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-transform-new-target": "^7.0.0-beta.0",
     "babel-preset-env": "^1.6.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-minify": "^0.2.0",
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^3.0.0",
     "get-graphql-schema": "^2.1.1",
@@ -34,9 +33,9 @@
     "node-sass": "^4.5.3",
     "postcss-loader": "^2.0.6",
     "sass-loader": "^6.0.6",
-    "ts-loader": "^2.3.6",
     "stylelint": "^8.1.1",
     "stylelint-config-recommended": "^1.0.0",
+    "ts-loader": "^2.3.6",
     "ts-node": "^3.3.0",
     "tslint": "^5.7.0",
     "tslint-language-service": "^0.9.6",
