Format graphql.ts

--- a/web/package.json
+++ b/web/package.json
@@ -7,7 +7,7 @@
     "watch": "npm run build -- --watch",
     "graphql": "get-graphql-schema http://localhost:3080/.api/graphql --json | gql2ts -o src/gqlschema.d.ts",
     "lint": "npm run tslint && npm run stylelint",
-    "tslint": "tslint -c tslint.json -p tsconfig.json 'src/**/*.tsx'",
+    "tslint": "tslint -c tslint.json -p tsconfig.json 'src/**/*.tsx?'",
     "stylelint": "stylelint 'src/**/*.scss'"
   },
   "author": "John Rothfels <john@sourcegraph.com>",
