Fix casing in import

--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -28,6 +28,7 @@
     "noUnusedLocals": true,
     "noUnusedParameters": false,
     "downlevelIteration": true,
+    "forceConsistentCasingInFileNames": true,
     "plugins": [
       {
         "name": "tslint-language-service",
