--- a/web/package.json
+++ b/web/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.1",
   "description": "Sourcegraph",
   "scripts": {
+    "test": "mocha --opts mocha.opts",
     "build": "webpack --config webpack.config.ts --progress --profile --colors",
+    "build-tests": "tsc -p .",
     "watch": "npm run build -- --watch",
     "graphql": "get-graphql-schema http://localhost:3080/.api/graphql --json | gql2ts -o src/gqlschema.d.ts",
     "lint": "npm run tslint && npm run stylelint",
@@ -15,8 +17,11 @@
   "devDependencies": {
     "@sourcegraph/tslint-config": "^1.0.1",
     "@types/js-yaml": "^3.9.1",
+    "@types/jsdom": "^11.0.2",
     "@types/lodash": "^4.14.38",
     "@types/marked": "^0.0.28",
+    "@types/mocha": "^2.2.43",
+    "@types/node": "^8.0.28",
     "@types/react": "^16.0.0",
     "@types/react-router": "^4.0.15",
     "@types/react-router-dom": "^4.0.7",
@@ -30,6 +35,8 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "get-graphql-schema": "^2.1.1",
     "gql2ts": "^1.2.1",
+    "jsdom": "^11.2.0",
+    "mocha": "^3.5.3",
     "node-sass": "^4.5.3",
     "postcss-loader": "^2.0.6",
     "sass-loader": "^6.0.6",
@@ -37,6 +44,7 @@
     "stylelint-config-recommended": "^1.0.0",
     "ts-loader": "^2.3.6",
     "ts-node": "^3.3.0",
+    "tsconfig-paths": "^2.3.0",
     "tslint": "^5.7.0",
     "tslint-language-service": "^0.9.6",
     "tslint-webpack-plugin": "^0.5.0",
@@ -62,6 +70,6 @@
     "react-visibility-sensor": "^3.10.1",
     "rxjs": "^5.4.2",
     "vscode-languageserver-types": "^3.4.0",
-    "whatwg-url": "^6.1.0"
+    "whatwg-url": "^6.2.1"
   }
 }
