Move components out of SearchBox

--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -20,6 +20,7 @@
     "noUnusedParameters": false,
     "downlevelIteration": true,
     "forceConsistentCasingInFileNames": true,
+    "noImplicitThis": true,
     "plugins": [
       {
         "name": "tslint-language-service",
