Fix some noImplicitAny errors

--- a/web/package.json
+++ b/web/package.json
@@ -17,15 +17,20 @@
   "devDependencies": {
     "@sourcegraph/tslint-config": "^1.0.1",
     "@types/auth0-js": "^8.6.3",
+    "@types/escape-string-regexp": "0.0.31",
+    "@types/extract-text-webpack-plugin": "^2.1.0",
+    "@types/highlight.js": "^9.1.10",
     "@types/jsdom": "^11.0.2",
     "@types/lodash": "^4.14.38",
     "@types/marked": "^0.0.28",
     "@types/mocha": "^2.2.43",
     "@types/node": "^8.0.28",
     "@types/react": "^16.0.0",
+    "@types/react-dom": "^15.5.5",
+    "@types/react-icons": "^2.2.2",
     "@types/react-router": "^4.0.15",
     "@types/react-router-dom": "^4.0.7",
-    "@types/webpack": "^3.0.10",
+    "@types/webpack": "^3.0.12",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-add-module-exports": "^0.2.1",
