--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,13 +1,13 @@
 {
-    // See https://go.microsoft.com/fwlink/?LinkId=733558
-    // for the documentation about the tasks.json format
-    "version": "2.0.0",
-    "isShellCommand": true,
-	"tasks": [
-		{
-			"taskName": "start",
-			"command": "${workspaceRoot}/dev/start.sh",
-			"isBackground": true
-		}
-	]
+  // See https://go.microsoft.com/fwlink/?LinkId=733558
+  // for the documentation about the tasks.json format
+  "version": "2.0.0",
+  "tasks": [
+    {
+      "taskName": "start",
+      "command": "${workspaceRoot}/dev/start.sh",
+      "isBackground": true,
+      "problemMatcher": []
+    }
+  ]
 }
