Update to react 16 (#7492)

--- a/web/package.json
+++ b/web/package.json
@@ -25,10 +25,10 @@
     "@types/marked": "^0.0.28",
     "@types/mocha": "^2.2.43",
     "@types/node": "^8.0.28",
-    "@types/react": "^16.0.0",
+    "@types/react": "^16.0.7",
     "@types/react-dom": "^15.5.5",
     "@types/react-router": "^4.0.15",
-    "@types/react-router-dom": "^4.0.7",
+    "@types/react-router-dom": "^4.0.8",
     "@types/webpack": "^3.0.12",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
@@ -67,12 +67,12 @@
     "immutable": "^3.8.1",
     "lodash": "^4.11.2",
     "marked": "^0.3.6",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-visibility-sensor": "^3.10.1",
-    "rx-component": "0.0.5",
+    "rx-component": "^0.0.8",
     "rxjs": "^5.4.3",
     "vscode-languageserver-types": "^3.4.0",
     "whatwg-url": "^6.2.1"
