--- a/web/package.json
+++ b/web/package.json
@@ -21,6 +21,7 @@
     "@types/escape-string-regexp": "0.0.31",
     "@types/extract-text-webpack-plugin": "^2.1.0",
     "@types/highlight.js": "^9.1.10",
+    "@types/js-base64": "^2.1.5",
     "@types/jsdom": "^11.0.2",
     "@types/lodash": "^4.14.38",
     "@types/marked": "^0.0.28",
@@ -66,6 +67,7 @@
     "escape-string-regexp": "^1.0.5",
     "highlight.js": "^9.12.0",
     "immutable": "^3.8.1",
+    "js-base64": "^2.3.2",
     "lodash": "^4.11.2",
     "marked": "^0.3.6",
     "react": "^16.0.0",
