support running the `tsc: watch` build task in vscode
This lets you get project-wide diagnostics in the vscode Problems panel by running `Tasks: Run Build Task` and selecting `tsc: watch - web/tsconfig.json`.

You should still run `dev/start.sh`. This build task will not produce output files.

Without this, you would only get per-file diagnostics for open files (not project-wide).

--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -13,7 +13,12 @@
     ],
     "jsx": "react",
     "sourceMap": true,
+    "noEmit": true,
     "downlevelIteration": true,
+    "typeRoots": [
+      "./node_modules/@types",
+      "./node_modules/date-fns"
+    ],
     "plugins": [
       {
         "name": "tslint-language-service"
