--- a/web/package.json
+++ b/web/package.json
@@ -10,7 +10,7 @@
     "build": "webpack --config webpack.config.ts --progress --profile --colors",
     "build-tests": "tsc -p ./tsconfig.test.json",
     "watch": "npm run build -- --watch",
-    "graphql": "get-graphql-schema http://localhost:3080/.api/graphql --json | gql2ts -o src/gqlschema.d.ts",
+    "graphql": "get-graphql-schema http://localhost:3080/.api/graphql --json | gql2ts -o src/gqlschema.d.ts && tsfmt -r src/gqlschema.d.ts",
     "lint": "npm run tslint && npm run stylelint",
     "tslint": "tslint -c tslint.json -p tsconfig.json 'src/**/*.ts?(x)'",
     "stylelint": "stylelint 'src/**/*.scss'"
@@ -57,6 +57,7 @@
     "tslint-language-service": "^0.9.6",
     "tslint-webpack-plugin": "^0.5.0",
     "typescript": "^2.5.2",
+    "typescript-formatter": "^6.0.0",
     "webpack": "^3.5.6",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-shell-plugin": "^0.5.0"
