Add babel-polyfill (#7660)

--- a/web/.babelrc
+++ b/web/.babelrc
@@ -7,7 +7,8 @@
     [
       "env", {
         "targets": {
-          "browsers": ["last 2 versions", "safari >= 7"]
+          "browsers": ["last 2 versions", "safari >= 7"],
+          "useBuiltIns": true
         }
       }
     ]
@@ -19,7 +20,8 @@
           "env", {
             "targets": {
               "browsers": ["last 2 versions", "safari >= 7"],
-              "uglify": true
+              "uglify": true,
+              "useBuiltIns": true
             }
           }
         ]
